<resources>
    <string name="app_name">4InARow</string>
    <string name="txt_email_signin">E-mail:</string>
    <string name="txt_pass_signin">Password:</string>
    <string name="btn_signin">Sign In</string>
    <string name="btn_signup">Sign Up</string>
    <string name="game_name">4 In A Row</string>

    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="pass_min_msg">Password must be at least 8 characters</string>
    <string name="login_signup_error">Incorrect mail and/or password or no user found</string>
    <string name="dot">.</string>
    <string name="underline">_</string>
    <string name="user">user</string>
    <string name="users">users</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="txt_username_signup">User Name:</string>
    <string name="submit">Submit</string>
    <string name="email_length_error">Please enter a valid E-mail</string>
    <string name="enter_username_error">Please enter a user name</string>
    <string name="mode_2players_same">2 players\n(Same phone)</string>
    <string name="mode_2players_web">2 players\n(Web)</string>
    <string name="mode_1vs_comp_easy">1 VS Comp - Easy</string>
    <string name="mode_1vs_comp_normal">1 VS Comp - Normal</string>
    <string name="mode_1vs_comp_hard">1 VS Comp - Hard</string>
    <string name="mode_winningtable">Winning table</string>
    <string name="opponent_ai">Computer</string>
    <string name="opponent_player">Friend</string>
    <string name="draw">It\'s a draw</string>
    <string name="you_win">You Win!</string>
    <string name="you_lose">You Lost!</string>
    <string name="friend_win">Friend Wins!</string>
    <string name="comp_win">Computer Wins!</string>
    <string name="you">You</string>
    <string name="restart_game">Restart Game</string>
    <string name="reset_game">Reset Game?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="back">Go Back?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_winner">Winner:</string>
    <string name="txt_loser">Loser:</string>
    <string name="level">level</string>
    <string name="ai_mode">ai_mode</string>
    <string name="host">host</string>
    <string name="guest">guest</string>
</resources>
